<package format="2">
  <name>cob_base_velocity_smoother</name>
  <version>0.7.7</version>
  <description>The 'cob_base_velocity_smoother' reads velocity messages and publishes messages of the same type for "smoothed" velocity to avoid shaking behavior.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_base_velocity_smoother</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="bnm@ipa.fhg.de">Benjamin Maidel</maintainer>
  <author email="florian.mirus@gmx.net">Florian Mirus</author>
  <author email="bnm@ipa.fhg.de">Benjamin Maidel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>

</package>
