<?xml version="1.0"?>
<package>
  <name>cob_cartesian_controller</name>
  <version>0.6.8</version>
  <description>
    This package provides nodes that broadcast tf-frames along various (model-based) Cartesian paths.
    The tf-frames can be used as targets for the cob_frame_tracker/cob_twist_controller
  </description>

  <author email="fxm-cm@ipa.fhg.de">Christoph Mark</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cob_frame_tracker</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>cob_twist_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>xacro</run_depend>

</package>
