<package format="2">
  <name>cob_collision_velocity_filter</name>
  <version>0.6.11</version>
  <description>The cob_collision_velocity_filter package is a package for collision avoidance using teleoperation.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_collision_velocity_filter</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Matthias Gruhler</author>
  <author>Michal Spanel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>cob_footprint_observer</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

</package>
