<package>
  <name>cob_control</name>
  <version>0.5.4</version>
  <description>cob_control meta-package</description>


  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_control</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cob_base_velocity_smoother</run_depend>
  <run_depend>cob_collision_velocity_filter</run_depend>
  <run_depend>cob_control_mode_adapter</run_depend>
  <run_depend>cob_footprint_observer</run_depend>
  <run_depend>cob_frame_tracker</run_depend>
  <run_depend>cob_hardware_interface</run_depend>
  <run_depend>cob_lookat_controller</run_depend>
  <run_depend>cob_path_broadcaster</run_depend>
  <run_depend>cob_trajectory_controller</run_depend>
  <run_depend>cob_twist_controller</run_depend>




  <export>
    <metapackage/>
  </export>
</package>
