<package format="2">
  <name>cob_control_mode_adapter</name>
  <version>0.6.11</version>
  <description>The cob_control_mode_adapter package</description>

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>controller_manager_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
