<package format="2">
  <name>cob_control_mode_adapter</name>
  <version>0.6.16</version>
  <description>The cob_control_mode_adapter package</description>

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>controller_manager_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>

</package>
