<package format="2">
  <name>cob_control_msgs</name>
  <version>0.6.16</version>
  <description>
    Common messages and services used in various packages within cob_control.
  </description>


  <license>Apache 2.0</license>

  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
