<package format="2">
  <name>cob_control_msgs</name>
  <version>0.8.20</version>
  <description>
    Common messages and services used in various packages within cob_control.
  </description>


  <license>Apache 2.0</license>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
