<package format="2">
  <name>cob_footprint_observer</name>
  <version>0.8.1</version>
  <description>The cob_footprint_observer package adjusts the footprint of the robot based on the setup (e.g. arm and/or tray).</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_footprint_observer</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="flg@ipa.fhg.de">Felipe Garcia Lopez</maintainer>
  <author>Matthias Gruhler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
